--- a/DemensDel2/DemensDel2API/DemensDel2API.csproj
+++ b/DemensDel2/DemensDel2API/DemensDel2API.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DemensDel2\DemensDel2.csproj" />
+  </ItemGroup>
+
 </Project>
