--- a/DemensDel2/DemensDel2API/DemensDel2API.csproj
+++ b/DemensDel2/DemensDel2API/DemensDel2API.csproj
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
